--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <div class="caixa-principal">
+            <h1>Você pode perguntar para a Gab.IA</h1>
+            <div class="caixa-perguntas"></div>
+            <div class="caixa-alternativas"></div>
+            <div class="caixa-resultado"></div>
+            <p class="texto-resultado"></p>
+        </div>
+    </section>
+    <script src=""script.js"></script>
 </body>
+
 </html>
